--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -37,7 +37,6 @@ nav {
 
 footer {
   position: fixed;
-  left: 0;
   bottom: 0;
   text-align: center;
   font-size: 15px;
@@ -73,10 +72,11 @@ nav>ul>li>a {
 /*Main*/
 main {
   margin: 5%;
+  margin-bottom: 15%;
 }
 
 /*Login*/
-main[login] {
+main[access] {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -84,43 +84,43 @@ main[login] {
   color: #801524;
 }
 
-main[login]>h1 {
+main[access]>h1 {
   font-size: 40px;
   font-weight: bold;
 }
 
-main[login]>form {
+main[access]>form {
   width: 100%;
 }
 
-main[login]>form>ul {
+main[access]>form>ul {
   list-style-type: none;
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
 
-main[login]>form>ul>li {
+main[access]>form>ul>li {
   display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: center;
 }
 
-main[login] label {
+main[access] label {
   width: 20%;
   padding: 8px;
   font-size: large;
 }
 
-main[login] input {
+main[access] input {
   width: 30%;
   padding: 8px;
   border: 2px solid #801524;
   border-radius: 5px;
 }
 
-main[login] input[type="submit"] {
+main[access] input[type="submit"] {
   color: white;
   background-color: #801524;
   width: 15%;
@@ -128,18 +128,16 @@ main[login] input[type="submit"] {
   font-size: large;
 }
 
-main[login]>form>ul>li:last-child{
+main[access]>form>ul>li:last-child{
   font-size: larger;
 }
 
-main[login]>form>ul>li>a {
+main[access]>form>ul>li>a {
   margin-left: 1%;
   text-decoration: none;
   font-weight: bold;
   color: #801524;
 }
-
-/*Signup TODO*/
 
 /*Mobile version*/
 @media (max-width: 768px) {
@@ -182,34 +180,33 @@ main[login]>form>ul>li>a {
   }
 
   /*Login*/
-  main[login]>form>ul {
+  main[access]>form>ul {
     flex-direction: column;
   }
 
-  main[login]>form>ul>li {
+  main[access]>form>ul>li {
     flex-direction: column;
     width: 100%;
     align-items: center;
   }
 
-  main[login] label {
+  main[access] label {
     width: 60%;
     text-align: center;
     font-size: 25px;
   }
 
-  main[login] input {
+  main[access] input {
     width: 60%;
     font-size: large;
   }
 
-  main[login] input[type="submit"] {
+  main[access] input[type="submit"] {
     width: 40%;
   }
 
-  main[login]>form>ul>li>a {
+  main[access]>form>ul>li>a {
     margin-left: 0;
   }
 
-  /*Signup TODO*/
 }
