--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -27,10 +27,6 @@ footer {
   box-sizing: border-box;
 }
 
-footer {
-  padding: 10px;
-}
-
 nav {
   padding: 5px;
 }
@@ -40,6 +36,7 @@ footer {
   bottom: 0;
   text-align: center;
   font-size: 15px;
+  padding: 10px;
 }
 
 nav>input {
@@ -102,22 +99,26 @@ main[data-access]>form>ul {
 
 main[data-access]>form>ul>li {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
-  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 main[data-access] label {
-  width: 20%;
+  width: 40%;
   padding: 8px;
-  font-size: large;
+  font-size: 25px;
 }
 
 main[data-access] input {
-  width: 30%;
+  width: 40%;
   padding: 8px;
   border: 2px solid #801524;
   border-radius: 5px;
+  font-size: 20px;
+  color: #801524;
+  text-align: center;
 }
 
 main[data-access] input[type="submit"] {
@@ -133,7 +134,6 @@ main[data-access]>form>ul>li:last-child{
 }
 
 main[data-access]>form>ul>li>a {
-  margin-left: 1%;
   text-decoration: none;
   font-weight: bold;
   color: #801524;
@@ -186,33 +186,15 @@ main[data-access] p[error] {
   }
 
   /*Login*/
-  main[data-access]>form>ul {
-    flex-direction: column;
-  }
-
-  main[data-access]>form>ul>li {
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-  }
-
   main[data-access] label {
     width: 60%;
-    text-align: center;
-    font-size: 25px;
   }
 
   main[data-access] input {
     width: 60%;
-    font-size: large;
   }
 
   main[data-access] input[type="submit"] {
     width: 40%;
   }
-
-  main[data-access]>form>ul>li>a {
-    margin-left: 0;
-  }
-
 }
