--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -160,24 +160,22 @@ main[data-access] p[error] {
     width: 10%;
   }
 
-  nav > ul {
-    display: none;
-  }
-
   /* Navbar menu mobile layout */
   nav > ul {
     flex-direction: column;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     right: -100%; 
     width: 45%;
-    height: 94%;
+    height: 75%;
     background-color: #801524;
     overflow-y: auto;
     transition: right 0.3s ease;
+    display: none;
   }
 
   nav[data-open="true"] > ul {
+    display: block;
     right: 0;
   }
 
