--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -21,13 +21,15 @@ a {
 }
 
 aside{
-  height: 500px;
+  min-height: 500px;
+  max-height: 100%;
   width: 30%;
   background-color: #801524;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding: 10px;
 }
 
 /* Navbar and footer styles */
@@ -363,15 +365,24 @@ main[data-profile] aside > a {
   height: 30px;
   color: white;
   font-weight: normal;
-  text-decoration: underline;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  border: 1px, white, solid;
+  border-radius: 10px;
 }
+
 main[data-profile] a:hover {
   font-weight: bold;
+  border: 2px, white, solid;
+}
+
+main[data-profile] aside > p {
+  color: white;
+  text-align: center;
+  font-size: 20;
 }
 
 /* Customer's cart page */
@@ -572,25 +583,25 @@ main[data-book_details] section > footer {
   display: none;
 }
 
-main[data-book_details] aside > button{
-  background-color: #801524;
+main[data-book_details] aside > button {
+  font-size: 20px;
+  height: 30px;
   color: white;
-  border: none;
-  padding: 12px 24px;
-  font-size: 1rem;
+  background-color: #801524;
+  font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 1px, white, solid;
+  border-radius: 10px;
+}
+
+main[data-book_details] aside > button:hover {
   font-weight: bold;
-  border-radius: 6px;
+  border: 2px, white, solid;
   cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-main[data-book_details] aside button:hover {
-  background-color: #5a1d1d;
-  transform: translateY(-3px);
-}
-
-main[data-book_details] aside button:active {
-  transform: translateY(0);
 }
 
 main[data-book_details] aside p{
