--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -583,7 +583,7 @@ main[data-book_details] section > footer {
   display: none;
 }
 
-main[data-book_details] aside > button {
+main[data-book_details] aside > input[type="button"] {
   font-size: 20px;
   height: 30px;
   color: white;
@@ -598,7 +598,7 @@ main[data-book_details] aside > button {
   border-radius: 10px;
 }
 
-main[data-book_details] aside > button:hover {
+main[data-book_details] aside > input[type="button"]:hover {
   font-weight: bold;
   border: 2px, white, solid;
   cursor: pointer;
@@ -653,7 +653,6 @@ main[data-book_details] aside p{
     height: 60px;
   }
 
-
   /* Customer's profile page */
   main[data-profile]{
     display: flex;
@@ -679,17 +678,17 @@ main[data-book_details] aside p{
     justify-content: center;
     text-align: center;
   }
-  /* Detailed book page */
 
+  /* Detailed book page */
   main[data-book_details] section {
     width: 100%;
   }
 
-  main[data-book_details] aside{
+  main[data-book_details] aside {
     display: none;
   }    
 
-  main[data-book_details] section >footer {
+  main[data-book_details] section > footer {
     display: flex;
     flex-direction: column;
     margin-top: 2em;
@@ -702,7 +701,7 @@ main[data-book_details] aside p{
     color: #801524;
   }
 
-  main[data-book_details] section footer button {
+  main[data-book_details] section footer input[type="button"] {
     background-color: #801524;
     color: white;
     border: none;
@@ -714,12 +713,12 @@ main[data-book_details] aside p{
     transition: background-color 0.3s ease, transform 0.2s ease;
   }
 
-  main[data-book_details] section footer button:hover {
+  main[data-book_details] section footer input[type="button"]:hover {
     background-color: #5a1d1d;
     transform: translateY(-3px);
   }
 
-  main[data-book_details] section footer button:active {
+  main[data-book_details] section footer input[type="button"]:active {
     transform: translateY(0);
   }
 
