--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -232,16 +232,19 @@ main[data-home] > p {
 }
 
 main[data-home] article {
-  background-color: #fff;
+  background-color: #D9D9D9;
+  color: #801524;
   border-radius: 6px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 3px 5px rgba(0,0,0,0.3);
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 1rem;
   gap: 0.5rem;
 }
 
 main[data-home] article header {
+  width: 100%;
   display: flex;
   flex-direction: row;
   gap: 1rem;
@@ -269,6 +272,58 @@ main[data-home] article header p {
   margin-bottom: 0.25rem;
   font-size: 0.9rem;
   color: #555;
+}
+
+main[data-home] article input[type="button"] {
+  margin-bottom: 0.25rem;
+  font-size: 0.9rem;
+  color: white;
+  background-color: #801524;
+  border-radius: 10px;
+  border: none;
+  padding: 5px;
+  cursor: pointer;
+}
+
+main[data-home] article header input[type="button"]:first-of-type {
+    margin-left: auto;
+    background-image: url('../images/pencil.png');
+    background-position: center;
+    background-size: 80%;
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+}
+
+main[data-home] article footer input[type="button"]:last-of-type {
+    background-image: url('../images/list.png');
+    background-position: center;
+    background-size: 80%;
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+}
+
+main[data-home] article hr {
+    border: none;
+    height: 2px;
+    width: 100%;
+    background-color: #801524;
+    margin: 2px 0;
+}
+
+main[data-home] article ul {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;    
+}
+
+main[data-home] article > ul > li {
+  width: 100%;
+  display:flex;
 }
 
 main[data-home] article > p {
@@ -531,6 +586,7 @@ main[data-book_details] section {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  gap: 10px;
 }
 
 main[data-book_details] header {
@@ -550,31 +606,32 @@ main[data-book_details] p {
 }
 
 main[data-book_details] div {
-    margin: 30px auto;
-    position: relative;
-    width: 300px;
-    height: 300px;
+  height: 300px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-main[data-book_details] div figure {
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+main[data-book_details] div > div{
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
+
 
 main[data-book_details] div img {
+    max-height: 100%;
     max-width: 100%;
-    height: auto;
     border: 3px solid #801524;
-    border-radius: 12px;
+    border-radius: 10px;
 }
 
 main[data-book_details] div input[type="button"] {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
     width: 40px;
     height: 40px;
     cursor: pointer;
@@ -608,6 +665,7 @@ main[data-book_details] aside > p{
 
 /* Mobile version styles */
 @media (max-width: 768px) {
+
   nav[data-open="false"] > ul:first-of-type{
     display: none;
   }
