--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -200,17 +200,8 @@ main[data-access] > form > p:first-of-type {
 }
 
 /* Customer's home page and articles */
-main[data-home] article > header > figure {
-  width: 150px;
-  height: 150px;
-}
 
-main[data-home] article > header > figure > img {
-  height: inherit;
-  width: inherit;
-}
-
-main[data-home] {
+main[data-homeuser] {
   display: flex;
   flex-direction: column;
   padding: 1rem;
@@ -219,19 +210,19 @@ main[data-home] {
   gap: 1rem;
 }
 
-main[data-home] h1 {
+main[data-homeuser] h1 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
   color: #8e1017;
 }
 
-main[data-home] > p {
+main[data-homeuser] > p {
   font-size: 1.2rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
-main[data-home] article {
+main[data-homeuser] article {
   background-color: #D9D9D9;
   color: #801524;
   border-radius: 6px;
@@ -243,7 +234,7 @@ main[data-home] article {
   gap: 0.5rem;
 }
 
-main[data-home] article header {
+main[data-homeuser] article header {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -251,30 +242,123 @@ main[data-home] article header {
   align-items: center;
 }
 
-main[data-home] article header figure {
+main[data-homeuser] article header figure {
   margin: 0;
   min-width: 70px;
   max-width: 70px;
   max-height: 70px;
 }
-main[data-home] article header figure img {
+main[data-homeuser] article header figure img {
   display: block;
   width: 100%;
   height: auto;
   object-fit: cover;
   border-radius: 4px;
 }
-main[data-home] article header h2 {
+main[data-homeuser] article header h2 {
   font-size: 1.1rem;
   margin-bottom: 0.25rem;
 }
-main[data-home] article header p {
+main[data-homeuser] article header p {
+  margin-bottom: 0.25rem;
+  font-size: 0.9rem;
+  color: #555;
+}
+main[data-homeuser] article footer {
+  width: 100%;
+}
+
+main[data-homeuser] article > p {
+  font-size: 0.9rem;
+  line-height: 1.4;
+  margin-left: 86px;
+  color: #333;
+}
+
+main[data-homeuser] article footer {
+  display:flex;
+  margin-top: 0.5rem;
+}
+
+main[data-homeuser] article footer p {
+  margin-right: 1rem;
+}
+
+main[data-homeuser] article footer p span {
+  font-weight: bold;
+}
+
+
+/* Vendor's homepage */
+
+main[data-homevendor] {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-bottom: 100px;
+  gap: 1rem;
+}
+
+main[data-homevendor] h1 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+  color: #8e1017;
+}
+
+main[data-homevendor] > p {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+main[data-homevendor] article {
+  background-color: #D9D9D9;
+  color: #801524;
+  border-radius: 6px;
+  box-shadow: 0 3px 5px rgba(0,0,0,0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  gap: 0.5rem;
+}
+
+main[data-homevendor] article header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+  border-bottom: 2px #801524 solid;
+}
+
+main[data-homevendor] article header figure {
+  margin: 0;
+  min-width: 70px;
+  max-width: 70px;
+  max-height: 70px;
+}
+main[data-homevendor] article header figure img {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 4px;
+}
+main[data-homevendor] article header h2 {
+  font-size: 1.1rem;
+  margin-bottom: 0.25rem;
+}
+main[data-homevendor] article header p {
   margin-bottom: 0.25rem;
   font-size: 0.9rem;
   color: #555;
 }
 
-main[data-home] article input[type="button"] {
+main[data-homevendor] article input[type="button"] {
+  width: 35%;
   margin-bottom: 0.25rem;
   font-size: 0.9rem;
   color: white;
@@ -285,7 +369,11 @@ main[data-home] article input[type="button"] {
   cursor: pointer;
 }
 
-main[data-home] article header input[type="button"]:first-of-type {
+main[data-homevendor] article > footer > input[type="button"] {
+  margin-right: auto;
+}
+
+main[data-homevendor] article header input[type="button"]:first-of-type {
     margin-left: auto;
     background-image: url('../images/pencil.png');
     background-position: center;
@@ -295,7 +383,9 @@ main[data-home] article header input[type="button"]:first-of-type {
     height: 40px;
 }
 
-main[data-home] article footer input[type="button"]:last-of-type {
+main[data-homevendor] article footer input[type="button"]:last-of-type {
+  margin-right: 0;
+  margin-left: auto;
     background-image: url('../images/list.png');
     background-position: center;
     background-size: 80%;
@@ -304,16 +394,9 @@ main[data-home] article footer input[type="button"]:last-of-type {
     height: 40px;
 }
 
-main[data-home] article hr {
-    border: none;
-    height: 2px;
-    width: 100%;
-    background-color: #801524;
-    margin: 2px 0;
-}
 
-main[data-home] article ul {
-  width: 80%;
+main[data-homevendor] article ul {
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -321,34 +404,44 @@ main[data-home] article ul {
   list-style-type: none;    
 }
 
-main[data-home] article > ul > li {
+main[data-homevendor] article > ul > li {
   width: 100%;
   display:flex;
+  flex-direction: row;
 }
 
-main[data-home] article > p {
+main[data-homevendor] article > ul > li > p{
+  width: 50%;
+  text-align: left;
+}
+main[data-homevendor] article > ul > li > ul{
+  display: inline;
+  width: 50%;
+  text-align: left;
+}
+
+main[data-homevendor] article > p {
   font-size: 0.9rem;
   line-height: 1.4;
   margin-left: 86px;
   color: #333;
 }
 
-main[data-home] article footer {
+main[data-homevendor] article footer {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin-top: 0.5rem;
-  margin-left: 86px;
+  padding-top: 0.5rem;
+  width: 100%;
+  border-top: 2px #801524 solid;
 }
 
-main[data-home] article footer p {
+main[data-homevendor] article footer p {
   margin-right: 1rem;
 }
 
-main[data-home] article footer p span {
+main[data-homevendor] article footer p span {
   font-weight: bold;
 }
-
 
 /* Customer's Profile page */
 main[data-profile] {
